--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,47 +37,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def greater(a,b):\n",
-    " def greater_of_two(a, b):\n",
+    "#your code here\n",
     "    if a > b:\n",
     "        return a\n",
+    "    if b>a:\n",
+    "        return b\n",
     "    else:\n",
     "        return b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'greater_of_two' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [30]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mgreater_of_two\u001b[49m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m7\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'greater_of_two' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
      ]
     }
    ],
    "source": [
-    "result = greater_of_two(1, 7)\n",
-    "print(result)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#your code here"
+    "# This will test your function \n",
+    "\n",
+    "a = 5\n",
+    "b = 8\n",
+    "print(greater(a,b))"
    ]
   },
   {
@@ -89,21 +81,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "lst=[1,2,3,4,6]\n",
+    "def greatest(lst):\n",
+    "    return max(lst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
-    "test_greatest(greatest)"
+    "print(greatest(lst))"
    ]
   },
   {
@@ -115,24 +118,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sum_all(lst):\n",
-    "#your code here"
+    "#your code here\n",
+    " return sum(lst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.060s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
-    "test_sum(sum_all)"
+    "test_sum(sum_all)\n",
+    "print(sum_all(lst))"
    ]
   },
   {
@@ -144,24 +168,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "lst=[1,2,3,4,5,6,7]\n",
     "def mult_all(lst):\n",
-    "#your code here"
+    "#your code here\n",
+    "    res = 1\n",
+    "    for i in lst:\n",
+    "        res *= i\n",
+    "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5040\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
-    "test_mult(mult_all)"
+    "print(mult_all(lst))"
    ]
   },
   {
@@ -173,22 +210,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def oper_all(arr, oper = \"*\"):\n",
-    "#your code here"
+    "#your code here\n",
+    "    if oper ==\"+\":\n",
+    "        return sum_all(arr)\n",
+    "    elif oper == \"*\":\n",
+    "       return mult_all(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5040\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
-    "test_operations(oper_all)"
+    "print(oper_all(lst,\"*\"))"
    ]
   },
   {
@@ -200,41 +249,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def factorial(n):\n",
-    "#your code here"
+    "#your code here\n",
+    "    a = 2\n",
+    "    for i in range(2,n+2):\n",
+    "        a*= i \n",
+    "    return a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#factorial formula\n",
-    "#n! = n * ( n - 1 ) *...*1\n",
-    "\n",
-    "# This code defines a function called \"factorial\" which takes an input \"n\". The function uses a for loop to iterate through the range of numbers \n",
-    "# from 1 to n+1. For each number in that range, it multiplies the current value of x by the number in the range. At the end of the loop, \n",
-    "# the function returns the final value of x, which will be the factorial of the input number \"n\".\n",
-    "\n",
-    "# The Factorial of a positive integer n is the product of all positive integers less than or equal to n. \n",
-    "# For example, the factorial of 6 (written \"6!\") is 6 * 5 * 4 * 3 * 2 * 1 = 720.\n",
-    "\n",
-    "# So this function takes an input of any positive integer, and returns the factorial of that number."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "240\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
-    "test_factorial(factorial)"
+    "print(factorial(4))"
    ]
   },
   {
@@ -248,22 +290,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def unique(lst_un):\n",
-    "#your code here"
+    "#your code here\n",
+    "    unique_elements = []  \n",
+    "    for i in lst_un:\n",
+    "        if i not in unique_elements:\n",
+    "            unique_elements.append(i)  \n",
+    "    return unique_elements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique elements: [1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
-    "test_unique(unique)"
+    "lst_un = [1, 2, 2, 3, 3, 4, 4, 5]\n",
+    "print(\"Unique elements:\", unique(lst_un))"
    ]
   },
   {
@@ -276,22 +332,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mode_counter(arr):\n",
-    "#your code here"
+    "#your code here\n",
+    "    empty_dic= {}\n",
+    "    for i in arr:\n",
+    "        if i in empty_dic:\n",
+    "            empty_dic[i]+= 1\n",
+    "        else: empty_dic[i]= 1\n",
+    "            \n",
+    "    max_freq=0\n",
+    "    for val in empty_dic:\n",
+    "        if empty_dic[val] > max_freq:\n",
+    "            max_freq= empty_dic[val]\n",
+    "            \n",
+    "    mode=[]\n",
+    "    for key in empty_dic:\n",
+    "        if empty_dic[key] == max_freq:\n",
+    "            mode.append(key)\n",
+    "            return mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the mode in the list is:  [4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# This will test your function \n",
-    "test_mode(mode_counter)"
+    "lst_un = [1, 2, 2, 3, 3,4, 4, 4, 5]\n",
+    "print(\"the mode in the list is: \",mode_counter(lst_un))"
    ]
   },
   {
@@ -304,22 +384,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def st_dev(list_sd):\n",
-    "#your code here"
+    "#your code here\n",
+    "    sum_values = 0\n",
+    "    count = 0\n",
+    "    for num in lst:\n",
+    "        sum_values += num\n",
+    "        count += 1\n",
+    "    mean = sum_values / count\n",
+    "\n",
+    "    squared_diff_sum = 0\n",
+    "    for num in lst:\n",
+    "        squared_diff_sum += (num - mean) * (num - mean)\n",
+    "\n",
+    "    variance = squared_diff_sum / count\n",
+    "    std_dev = variance ** 0.5\n",
+    "\n",
+    "    return std_dev"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
-    "test_stdev(st_dev)"
+    "lst = [1, 2, 3, 4, 5, ]\n",
+    "print(st_dev(lst))"
    ]
   },
   {
@@ -331,22 +435,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pangram(string):\n",
-    "#your code here"
+    "#your code here\n",
+    "    s = s.lower()\n",
+    "    alphabet_set = set(string.ascii_lowercase)\n",
+    "    s_set = set(s)\n",
+    "    return alphabet_set.issubset(s_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# This will test your function \n",
-    "test_pangram(pangram)"
+    "print(is_pangram(\"The quick brown fox jumps over the lazy dog\"))\n",
+    "print(is_pangram(\"Hello, world!\")) "
    ]
   },
   {
@@ -360,22 +477,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sort_alpha(string):\n",
-    "#your code here"
+    "def sort_alpha(s):\n",
+    "#your code here\n",
+    "    words = []\n",
+    "    temp = \"\"\n",
+    "    for char in s:\n",
+    "        if char == \",\":\n",
+    "            words.append(temp)\n",
+    "            temp = \"\"\n",
+    "        else:\n",
+    "            temp += char\n",
+    "    words.append(temp) \n",
+    "    sorted_words = sorted(words)\n",
+    "    result = \"\"\n",
+    "    for word in sorted_words:\n",
+    "        if result:\n",
+    "            result += \",\"\n",
+    "        result += word\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple,banana,grape,orange\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
-    "test_alpha(sort_alpha)"
+    "print(sort_alpha(\"banana,apple,grape,orange\"))"
    ]
   },
   {
@@ -387,28 +528,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "def check_pass(password):\n",
-    "#your code here"
+    "#your code here\n",
+    "    if len(password) < 8:\n",
+    "        return False\n",
+    "    \n",
+    "    has_lower = bool(re.search(r\"[a-z]\", password))\n",
+    "    has_upper = bool(re.search(r\"[A-Z]\", password))\n",
+    "    has_digit = bool(re.search(r\"\\d\", password))\n",
+    "    has_special = bool(re.search(r\"[^a-zA-Z0-9]\", password))\n",
+    "    \n",
+    "    return has_lower and has_upper and has_digit and has_special"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# This will test your function \n",
-    "test_pass(check_pass)"
+    "print(check_pass(\"Weak123\")) \n",
+    "print(check_pass(\"Str0ng!Pass\"))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -422,12 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
